Closed Bug 333221 Opened 18 years ago Closed 18 years ago

IDC_SELECTANCHOR cursor is no longer required

Categories

(Core :: Widget: Win32, defect)

x86
Windows XP
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: emk, Assigned: emk)

References

Details

Attachments

(1 file)

Nobody uses it after bug 330276. It's only for Win95/NT4.
Attached patch Removing patchSplinter Review
Assignee: win32 → VYV03354
Status: NEW → ASSIGNED
Attachment #217669 - Flags: superreview?(roc)
Attachment #217669 - Flags: review?(roc)
Attachment #217669 - Flags: superreview?(roc)
Attachment #217669 - Flags: superreview+
Attachment #217669 - Flags: review?(roc)
Attachment #217669 - Flags: review+
checked-in.
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: