Bug 333221 IDC_SELECTANCHOR cursor is no longer required. patch by Masatoshi Kimura (emk) <VYV03354@nifty.ne.jp> r+sr=roc